src/unit_tests/TypeChecker/fail/st-disp.cl
class Main {
    a : A <- new A;
    main() : Int { a@None.asd(123)};
};

class A {};